src/OcctNative/OcctOcaf.h

    // Session, document, persistence, transactions and diagnostics.
    OCCTBRIDGE_API OcctOcafHandle occt_ocaf_create();
    OCCTBRIDGE_API void occt_ocaf_destroy(OcctOcafHandle handle);
    OCCTBRIDGE_API const char* occt_ocaf_last_error(OcctOcafHandle handle);
    OCCTBRIDGE_API const char* occt_ocaf_version();
    OCCTBRIDGE_API const char* occt_ocaf_capabilities();
    OCCTBRIDGE_API int occt_ocaf_new_document(OcctOcafHandle handle, const char* utf8Format);
    OCCTBRIDGE_API int occt_ocaf_open_document(OcctOcafHandle handle, const char* utf8Path);
    OCCTBRIDGE_API int occt_ocaf_save_document(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_save_as(OcctOcafHandle handle, const char* utf8Path);
    OCCTBRIDGE_API int occt_ocaf_close_document(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_is_open(OcctOcafHandle handle);
    OCCTBRIDGE_API const char* occt_ocaf_document_path(OcctOcafHandle handle);
    OCCTBRIDGE_API const char* occt_ocaf_storage_format(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_change_storage_format(OcctOcafHandle handle, const char* utf8Format);
    OCCTBRIDGE_API int occt_ocaf_is_saved(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_is_changed(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_is_empty(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_is_valid(OcctOcafHandle handle);
    OCCTBRIDGE_API const char* occt_ocaf_document_json(OcctOcafHandle handle, int depth);
    OCCTBRIDGE_API int occt_ocaf_new_command(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_open_command(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_commit_command(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_abort_command(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_has_open_command(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_get_undo_limit(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_set_undo_limit(OcctOcafHandle handle, int limit);
    OCCTBRIDGE_API int occt_ocaf_available_undos(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_available_redos(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_undo(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_redo(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_clear_undos(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_clear_redos(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_set_nested_transaction_mode(OcctOcafHandle handle, int enabled);
    OCCTBRIDGE_API int occt_ocaf_nested_transaction_mode(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_set_modification_mode(OcctOcafHandle handle, int enabled);
    OCCTBRIDGE_API int occt_ocaf_modification_mode(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_set_empty_labels_saving_mode(OcctOcafHandle handle, int enabled);
    OCCTBRIDGE_API int occt_ocaf_empty_labels_saving_mode(OcctOcafHandle handle);
    // Labels and generic attribute inspection.
    OCCTBRIDGE_API const char* occt_ocaf_root_entry(OcctOcafHandle handle);
    OCCTBRIDGE_API const char* occt_ocaf_main_entry(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_label_exists(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_create_label(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API const char* occt_ocaf_new_child(OcctOcafHandle handle, const char* parentEntry);
    OCCTBRIDGE_API const char* occt_ocaf_find_child(OcctOcafHandle handle, const char* parentEntry, int tag, int create);
    OCCTBRIDGE_API const char* occt_ocaf_father(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_label_tag(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_label_depth(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_label_is_root(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_label_is_imported(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_set_label_imported(OcctOcafHandle handle, const char* entry, int imported);
    OCCTBRIDGE_API int occt_ocaf_child_snapshot(OcctOcafHandle handle, const char* entry, int recursive);
    OCCTBRIDGE_API const char* occt_ocaf_child_at(OcctOcafHandle handle, int index);
    OCCTBRIDGE_API int occt_ocaf_attribute_snapshot(OcctOcafHandle handle, const char* entry, int includeForgotten);
    OCCTBRIDGE_API const char* occt_ocaf_attribute_type_at(OcctOcafHandle handle, int index);
    OCCTBRIDGE_API const char* occt_ocaf_attribute_guid_at(OcctOcafHandle handle, int index);
    OCCTBRIDGE_API const char* occt_ocaf_attribute_json_at(OcctOcafHandle handle, int index, int depth);
    OCCTBRIDGE_API int occt_ocaf_forget_attribute(OcctOcafHandle handle, const char* entry, const char* guid);
    OCCTBRIDGE_API int occt_ocaf_forget_all_attributes(OcctOcafHandle handle, const char* entry, int clearChildren);